# game-design.md

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/: README.md
benchmark/c-prompts/: platformer.md  survival.md
benchmark/games/platformer/: design-brief.md  game-design.md
benchmark/games/survival/: design-brief.md  game-design.md
benchmark/harness/: __init__.py  calibration.py  checklist.py  conditions.py  content_preservation.py  instrument.py  judge.py  llama_server.py  regime_constancy.py  run_trial.py  sanitization.py  sweep_plan.py  tasks.py  verify_claude_isolation.py
benchmark/harness/archived/: README.md  __init__.py  instrument_claude.py  run_step6c.py  verify_claude_isolation.py
benchmark/harness/audits/: blinding_outputs_Qwen3-Coder-30B-A3B-Instruct_unsloth-gguf_Q4_K_M_T=0.7_Tp=0.8_Tk=20_Rp=1.05_easy_platformer_2026-05-24T194900Z.json  instrument_calibration_Qwen3-Coder-30B-A3B-Instruct_unsloth-gguf_Q4_K_M_T=0.7_Tp=0.8_Tk=20_Rp=1.05_2026-05-24T141819Z.json  instrument_calibration_Qwen3-Coder-30B-A3B-Instruct_unsloth-gguf_Q4_K_M_T=0.7_Tp=0.8_Tk=20_Rp=1.05_2026-05-24T184757Z.json  instrument_calibration_Qwen3-Coder-30B-A3B-Instruct_unsloth-gguf_Q4_K_M_T=0.7_Tp=0.8_Tk=20_Rp=1.05_2026-05-24T185331Z.json  instrument_calibration_Qwen3-Coder-30B-A3B-Instruct_unsloth-gguf_Q4_K_M_T=0.7_Tp=0.8_Tk=20_Rp=1.05_Mt=8192_2026-05-27T223148Z.json  instrument_calibration_claude-opus-4-7_claude-code-cli-headless-effort-xhigh_native_T=0.0_Tp=1.0_Tk=0_Rp=1.0_2026-05-24T141819Z.json  instrument_calibration_claude-opus-4-7_claude-code-cli-headless-effort-xhigh_native_T=0.0_Tp=1.0_Tk=0_Rp=1.0_2026-05-24T184757Z.json  instrument_calibration_claude-opus-4-7_claude-code-cli-headless-effort-xhigh_native_T=0.0_Tp=1.0_Tk=0_Rp=1.0_2026-05-24T185331Z.json  opus_usage_extrapolation_pre_sweep_2026-05-27T154347Z.json  platformer_fairness_audit_20260524T132947Z.json  regime_constancy_post_hoc_2026-05-28T042253Z.json  regime_constancy_pre_sweep_2026-05-27T154347Z.json  survival_fairness_audit_20260524T132957Z.json
benchmark/harness/trial_gathers/: Qwen3-Coder-30B-A3B-Instruct_unsloth-gguf_Q4_K_M_T=0.7_Tp=0.8_Tk=20_Rp=1.05_Mt=8192_A_ambiguity_platformer_seed1000000.json  Qwen3-Coder-30B-A3B-Instruct_unsloth-gguf_Q4_K_M_T=0.7_Tp=0.8_Tk=20_Rp=1.05_Mt=8192_A_ambiguity_platformer_seed1000001.json  Qwen3-Coder-30B-A3B-Instruct_unsloth-gguf_Q4_K_M_T=0.7_Tp=0.8_Tk=20_Rp=1.05_Mt=8192_A_ambiguity_platformer_seed1000002.json  Qwen3-Coder-30B-A3B-Instruct_unsloth-gguf_Q4_K_M_T=0.7_Tp=0.8_Tk=20_Rp=1.05_Mt=8192_A_ambiguity_platformer_seed1000003.json  Qwen3-Coder-30B-A3B-Instruct_unsloth-gguf_Q4_K_M_T=0.7_Tp=0.8_Tk=20_Rp=1.05_Mt=8192_A_ambiguity_platformer_seed1000004.json  Qwen3-Coder-30B-A3B-Instruct_unsloth-gguf_Q4_K_M_T=0.7_Tp=0.8_Tk=20_Rp=1.05_Mt=8192_A_ambiguity_platformer_seed1000005.json  Qwen3-Coder-30B-A3B-Instruct_unsloth-gguf_Q4_K_M_T=0.7_Tp=0.8_Tk=20_Rp=1.05_Mt=8192_A_ambiguity_platformer_seed1000006.json  Qwen3-Coder-30B-A3B-Instruct_unsloth-gguf_Q4_K_M_T=0.7_Tp=0.8_Tk=20_Rp=1.05_Mt=8192_A_ambiguity_platformer_seed1000007.json  Qwen3-Coder-30B-A3B-Instruct_unsloth-gguf_Q4_K_M_T=0.7_Tp=0.8_Tk=20_Rp=1.05_Mt=8192_A_ambiguity_platformer_seed1000008.json  Qwen3-Coder-30B-A3B-Instruct_unsloth-gguf_Q4_K_M_T=0.7_Tp=0.8_Tk=20_Rp=1.05_Mt=8192_A_ambiguity_platformer_seed1000009.json  Qwen3-Coder-30B-A3B-Instruct_unsloth-gguf_Q4_K_M_T=0.7_Tp=0.8_Tk=20_Rp=1.05_Mt=8192_A_ambiguity_platformer_seed1000010.json  Qwen3-Coder-30B-A3B-Instruct_unsloth-gguf_Q4_K_M_T=0.7_Tp=0.8_Tk=20_Rp=1.05_Mt=8192_A_ambiguity_platformer_seed1000011.json  Qwen3-Coder-30B-A3B-Instruct_unsloth-gguf_Q4_K_M_T=0.7_Tp=0.8_Tk=20_Rp=1.05_Mt=8192_A_ambiguity_platformer_seed1000012.json  Qwen3-Coder-30B-A3B-Instruct_unsloth-gguf_Q4_K_M_T=0.7_Tp=0.8_Tk=20_Rp=1.05_Mt=8192_A_ambiguity_platformer_seed1000013.json  Qwen3-Coder-30B-A3B-Instruct_unsloth-gguf_Q4_K_M_T=0.7_Tp=0.8_Tk=20_Rp=1.05_Mt=8192_A_ambiguity_platformer_seed1000014.json  Qwen3-Coder-30B-A3B-Instruct_unsloth-gguf_Q4_K_M_T=0.7_Tp=0.8_Tk=20_Rp=1.05_Mt=8192_A_ambiguity_platformer_seed1000015.json  (+314 more)
benchmark/tasks/: ambiguity_platformer.yaml  ambiguity_survival.yaml  easy_platformer.yaml  easy_survival.yaml  hard_platformer.yaml  hard_survival.yaml  medium_platformer.yaml  medium_survival.yaml
benchmark/tools/: blinding_leak_prompt.md  download_ggufs.sh  fairness_audit_prompt.md  flattener.py  matches_intent_prompt.md  run_fairness_audit.py  run_instrument_calibration.py  run_step6_calibrations.py  run_step6c.py  run_trial_zero.py  verifier.py
docs/: game-design-md-v0.2-kickoff-addendum.md  game-design-md-v0.2-kickoff.md  spec.md  v0.2-findings.md  v0.2-phase2-spec-ambiguities.md  v0.2-phase5-help-benchmark-scope.md  v0.2-phase5-pre-registration.md
docs/benchmark/: T1_card.yaml  T2_card.yaml  T3_card.yaml  T4_card.yaml  T5_card.yaml  results.txt
docs/case-studies/: F-009.md
docs/methodology/: README.md
docs/release-notes/: v0.3.md
examples/deckbuilder/: game-design.md
examples/party-rpg/: game-design.md
examples/tcg/: game-design.md
examples/tick-combat/: game-design.md
examples/tick-combat/impl/xtreme/: Cargo.toml  README.md
examples/tick-combat/impl/xtreme/src/: components.rs  distributions.rs  lib.rs  loops.rs  main.rs  prng.rs  resources.rs  rules.rs  sim.rs  state.rs
examples/tick-combat/impl/xtreme/tests/: golden_seed_12345.jsonl  golden_seed_12345.txt  golden_trajectory.rs
schema/: game-design.schema.json
scripts/: docs_lint.py  run_benchmark.py
src/game_design_md/: __init__.py  __main__.py  cli.py  diff_cmd.py  export_cmd.py  findings.py  hook_cmd.py  init_cmd.py  linter.py  loader.py  refs.py  spec_cmd.py  status_cmd.py  tree.py  verify_cmd.py
tests/: conftest.py  test_checklist_wiring.py  test_deckbuilder.py  test_diff.py  test_distributions.py  test_export.py  test_harness_wiring.py  test_hook_cmd.py  test_init_cmd.py  test_lint.py  test_loader.py  test_packaging.py  test_refs.py  test_status.py  test_sweep_plan.py  test_tree.py  test_verify.py
(+530 files in other folders)
