[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "game-design-md"
version = "0.3.0a1"
description = "An LLM-first, engine-neutral, genre-agnostic specification for game design documents. Modeled on Google Labs' DESIGN.md."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "game-design.md contributors" }]
keywords = ["game-design", "gdd", "llm", "agents", "spec"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
"game-design.md" = "game_design_md.cli:main"
gdmd = "game_design_md.cli:main"

[project.urls]
Homepage = "https://github.com/bantarus/game-design.md"
Specification = "https://github.com/bantarus/game-design.md/blob/main/docs/spec.md"

[tool.hatch.build.targets.wheel]
packages = ["src/game_design_md"]

# D-006: ship spec.md and the JSON Schema as package data so a wheel install
# can read them via importlib.resources. The canonical files live at
# docs/spec.md and schema/game-design.schema.json; force-include copies them
# into the wheel at game_design_md/_data/.
[tool.hatch.build.targets.wheel.force-include]
"docs/spec.md" = "game_design_md/_data/spec.md"
"schema/game-design.schema.json" = "game_design_md/_data/game-design.schema.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004"]
